--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,9 @@
 @import "shared/assets/css/screen.css";
 
+:root {
+    --head-height: 72px;
+}
+
 .home-template .gh-portal-triggerbtn-iframe {
     display: none;
 }
@@ -22,7 +26,7 @@
     font-weight: 800;
     line-height: 1;
     color: var(--color-white);
-    letter-spacing: -0.01em;
+    letter-spacing: -0.03em;
 }
 
 .gh-home-description {
@@ -97,7 +101,9 @@
 
 .gh-home-latest-title {
     font-size: 2rem;
+    font-weight: 600;
     text-transform: uppercase;
+    letter-spacing: 0;
 }
 
 .gh-home-latest .gh-article {
@@ -113,7 +119,6 @@
 .gh-home-latest .gh-article-title {
     margin-bottom: 1.6rem;
     font-size: 4rem;
-    font-weight: 600;
 }
 
 .gh-home-latest .gh-article-meta {
@@ -134,14 +139,14 @@
     left: 0;
     padding: 12rem 0 8rem;
     text-align: center;
-    background: linear-gradient(180deg, transparent, rgba(255, 255, 255, 0.7), #fff);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.7), #fff);
 }
 
 .gh-home-latest-footer .gh-btn {
     height: 56px;
     padding: 0.8rem 2.4rem;
     font-size: 2.2rem;
-    letter-spacing: -0.01em;
+    letter-spacing: -0.03em;
     background-color: var(--ghost-accent-color);
     box-shadow: 0 27px 80px rgba(0, 0, 0, 0.07), 0 11.28px 33.4221px rgba(0, 0, 0, 0.0503198), 0 6.0308px 17.869px rgba(0, 0, 0, 0.0417275), 0 3.38082px 10.0172px rgba(0, 0, 0, 0.035), 0 1.79553px 5.32008px rgba(0, 0, 0, 0.0282725), 0 0.747159px 2.21381px rgba(0, 0, 0, 0.0196802);
 }
@@ -153,7 +158,7 @@
     display: flex;
     align-items: center;
     padding: 0.5rem 0.9rem;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 500;
     line-height: 1;
     color: var(--color-darker-gray);
@@ -170,6 +175,39 @@
     box-shadow: 0 0 0 0 rgba(255, 26, 117, 1);
     transform: scale(1);
     animation: pulse-black 2s infinite;
+}
+
+.gh-head {
+    background-color: var(--color-darker-gray);
+}
+
+.gh-head-logo,
+.gh-head-menu a {
+    color: var(--color-white);
+}
+
+.gh-head-btn {
+    height: 36px;
+    background-color: var(--ghost-accent-color);
+}
+
+.gh-article-tag {
+    font-size: 1.5rem;
+}
+
+.gh-article-meta {
+    margin-top: 1.6rem;
+    font-size: 1.4rem;
+    color: var(--color-secondary-text);
+    text-transform: uppercase;
+}
+
+.gh-article-meta a {
+    font-weight: 600;
+}
+
+.gh-article-image {
+    grid-column: main-start / main-end;
 }
 
 @keyframes pulse-black {
