--- a/post.hbs
+++ b/post.hbs
@@ -5,11 +5,12 @@
 <main class="gh-main">
     <article class="gh-article {{post_class}}">
         <header class="gh-article-header gh-canvas">
-            {{#if primary_tag}}
-                <a class="gh-article-tag" href="{{primary_tag.url}}">{{primary_tag.name}}</a>
-            {{/if}}
-
             <h1 class="gh-article-title">{{title}}</h1>
+
+            <span class="gh-article-meta">
+                {{#primary_author}}By <a href="{{url}}">{{name}}</a> —{{/primary_author}}
+                <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
+            </span>
 
             {{#if custom_excerpt}}
                 <p class="gh-article-excerpt">{{custom_excerpt}}</p>
