--- a/index.hbs
+++ b/index.hbs
@@ -28,52 +28,54 @@
             <p class="gh-home-copyright">{{@site.title}} © {{date format="YYYY"}}</p>
         </div>
 
-        <section class="gh-home-latest">
-            {{#if @site.icon}}
-                <img class="gh-home-latest-icon" src="{{@site.icon}}" alt="{{@site.title}}">
-            {{/if}}
+        <div class="gh-home-latest">
+            <section class="gh-home-latest-wrapper">
+                {{#if @site.icon}}
+                    <img class="gh-home-latest-icon" src="{{@site.icon}}" alt="{{@site.title}}">
+                {{/if}}
 
-            {{#get "posts" limit="1" include="authors"}}
-                {{#foreach posts}}
-                    <article class="gh-article {{post_class}}">
-                        <header class="gh-article-header">
-                            <h2 class="gh-article-title">{{title}}</h2>
-                            <span class="gh-article-meta">
-                                By {{primary_author.name}} —
-                                <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
-                            </span>
-                        </header>
+                {{#get "posts" limit="1" include="authors"}}
+                    {{#foreach posts}}
+                        <article class="gh-article {{post_class}}">
+                            <header class="gh-article-header">
+                                <h2 class="gh-article-title">{{title}}</h2>
+                                <span class="gh-article-meta">
+                                    By {{primary_author.name}} —
+                                    <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
+                                </span>
+                            </header>
 
-                        {{#if feature_image}}
-                            <figure class="gh-article-image">
-                                <img
-                                    srcset="{{img_url feature_image size="s"}} 300w,
-                                            {{img_url feature_image size="m"}} 720w,
-                                            {{img_url feature_image size="l"}} 960w,
-                                            {{img_url feature_image size="xl"}} 1200w,
-                                            {{img_url feature_image size="xxl"}} 2000w"
-                                    sizes="(max-width: 1200px) 100vw, 1200px"
-                                    src="{{img_url feature_image size="xl"}}"
-                                    alt="{{title}}"
-                                >
-                            </figure>
-                        {{/if}}
+                            {{#if feature_image}}
+                                <figure class="gh-article-image">
+                                    <img
+                                        srcset="{{img_url feature_image size="s"}} 300w,
+                                                {{img_url feature_image size="m"}} 720w,
+                                                {{img_url feature_image size="l"}} 960w,
+                                                {{img_url feature_image size="xl"}} 1200w,
+                                                {{img_url feature_image size="xxl"}} 2000w"
+                                        sizes="(max-width: 1200px) 100vw, 1200px"
+                                        src="{{img_url feature_image size="xl"}}"
+                                        alt="{{title}}"
+                                    >
+                                </figure>
+                            {{/if}}
 
-                        <div class="gh-content">
-                            {{content}}
-                        </div>
-                    </article>
+                            <div class="gh-content">
+                                {{content}}
+                            </div>
+                        </article>
 
-                    <footer class="gh-home-latest-footer">
-                        <a class="gh-btn" href="{{url}}">View latest issue + Archive</a>
-                    </footer>
-                {{/foreach}}
-            {{/get}}
+                        <footer class="gh-home-latest-footer">
+                            <a class="gh-btn" href="{{url}}">View latest issue + Archive</a>
+                        </footer>
+                    {{/foreach}}
+                {{/get}}
+            </section>
 
             <div class="gh-home-latest-label">
                 <span class="gh-home-latest-indicator"></span>
                 Latest issue
             </div>
-        </section>
+        </div>
     </div>
 </main>
