--- a/post.hbs
+++ b/post.hbs
@@ -5,14 +5,15 @@
 <main class="gh-main">
     <article class="gh-article {{post_class}}">
         <header class="gh-article-header gh-canvas">
-            {{#if primary_tag}}
-                <a class="gh-article-tag" href="{{primary_tag.url}}">{{primary_tag.name}}</a>
-            {{/if}}
-
             <h1 class="gh-article-title">{{title}}</h1>
 
             <span class="gh-article-meta">
-                {{#primary_author}}By <a href="{{url}}">{{name}}</a> —{{/primary_author}}
+                {{#primary_author}}By <a href="{{url}}">{{name}}</a>{{/primary_author}}
+                {{#if primary_tag}}
+                    in
+                    <a class="gh-article-tag" href="{{primary_tag.url}}">{{primary_tag.name}}</a>
+                {{/if}}
+                —
                 <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
             </span>
 
@@ -51,7 +52,7 @@
                 </div>
 
                 <div class="gh-navigation-middle">
-                    <button class="gh-btn js-archive">Browse archive</button>
+                    <a class="gh-btn" href="/page/2">Browse archive</a>
                 </div>
 
                 <div class="gh-navigation-next">
@@ -65,34 +66,5 @@
         </footer>
     </article>
 </main>
-
-<div class="gh-modal-overlay">
-    <section class="gh-modal">
-        {{#get "posts" limit="all"}}
-            <header class="gh-modal-header">
-                <h2 class="gh-modal-title">Archive</h2>
-                <span class="gh-modal-description">
-                    {{plural pagination.total empty='0 issues' singular='% issue' plural='% issues'}}
-                </span>
-            </header>
-
-            {{#foreach posts}}
-                <article class="gh-modal-item">
-                    <a class="gh-modal-item-link" href="{{url}}">
-                        <div class="gh-modal-item-meta">
-                            <time datetime="{{date format="YYYY-MM-DD"}}">{{date}}</time>
-                            {{#has id=../../id}}<span class="gh-modal-item-current">Current issue</span>{{/has}}
-                        </div>
-                        <h3 class="gh-modal-item-title">{{title}}</h3>
-                    </a>
-                </article>
-            {{/foreach}}
-        {{/get}}
-    </section>
-
-    <button class="gh-modal-close gh-icon-btn">
-        {{> icons/close}}
-    </button>
-</div>
 
 {{/post}}
