--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -11,11 +11,16 @@
 
 :root {
     --font-sans: Mulish; /* stylelint-disable-line value-keyword-case */
-    --head-height: 72px;
+    --head-height: 80px;
+    --h1-size: 4rem;
 }
 
 .home-template .gh-portal-triggerbtn-iframe {
     display: none;
+}
+
+.paged .gh-main {
+    padding: 8vmin 0;
 }
 
 .gh-home {
@@ -195,6 +200,10 @@
     background-color: var(--color-darker-gray);
 }
 
+.gh-head-logo {
+    font-weight: 800;
+}
+
 .gh-head-logo,
 .gh-head-menu a {
     color: var(--color-white);
@@ -211,6 +220,95 @@
     padding-left: 1.4rem;
     font-size: 1.5rem;
     background-color: var(--ghost-accent-color);
+}
+
+.gh-pagehead {
+    margin-bottom: 4.8rem;
+}
+
+.gh-pagehead-title {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.gh-pagehead-title::before {
+    width: 40px;
+    height: 2px;
+    margin-right: 1.6rem;
+    content: "";
+    background-color: var(--color-darker-gray);
+}
+
+.gh-pagehead-description {
+    margin-top: 1.6rem;
+    font-size: 1.8rem;
+    color: var(--color-secondary-text);
+}
+
+.gh-card-link {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 4rem 0;
+    white-space: nowrap;
+    border-top: 1px solid var(--color-light-gray);
+    transition: opacity 0.2s ease;
+}
+
+.gh-card-link::before {
+    position: absolute;
+    top: -1px;
+    left: 0;
+    height: 2px;
+    content: "";
+    background-color: var(--color-darker-gray);
+    opacity: 0;
+    /* transition: width 0.7s cubic-bezier(0.26, 0.86, 0.6, 0.99); */
+    transition: opacity 0.4s ease;
+}
+
+.gh-card-link:hover::before {
+    width: 100%;
+    opacity: 1;
+}
+
+.gh-feed:hover .gh-card-link {
+    opacity: 0.3;
+}
+
+.gh-feed:hover .gh-card-link:hover {
+    opacity: 1;
+}
+
+.gh-card-date {
+    font-size: 1.1rem;
+    letter-spacing: -0.01em;
+}
+
+.gh-card-month {
+    margin-right: 0.4rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: var(--ghost-accent-color);
+    text-transform: uppercase;
+}
+
+.gh-card-title {
+    margin-left: 1.6rem;
+    font-size: 1.9rem;
+}
+
+.gh-card-excerpt {
+    overflow: hidden;
+    font-size: 1.7rem;
+    color: var(--color-secondary-text);
+    text-overflow: ellipsis;
+}
+
+.gh-card-excerpt::before {
+    padding: 0 0.4rem;
+    content: "—";
 }
 
 .gh-article-header {
