--- a/home.hbs
+++ b/home.hbs
@@ -37,6 +37,8 @@
                 {{#get "posts" limit="1" include="authors"}}
                     {{#foreach posts}}
                         <article class="gh-article {{post_class}}">
+                            <a class="gh-article-link" href="{{url}}"></a>
+
                             <header class="gh-article-header">
                                 <h2 class="gh-article-title">{{title}}</h2>
                                 <span class="gh-article-meta">
@@ -66,7 +68,7 @@
                         </article>
 
                         <footer class="gh-home-latest-footer">
-                            <a class="gh-btn" href="{{url}}">View latest issue + Archive</a>
+                            <button class="gh-btn">Read latest issue</button>
                         </footer>
                     {{/foreach}}
                 {{/get}}
