--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,7 +12,7 @@
 :root {
     --font-sans: Mulish; /* stylelint-disable-line value-keyword-case */
     --head-height: 80px;
-    --h1-size: 4rem;
+    --h1-size: 4.2rem;
 }
 
 .home-template .gh-portal-triggerbtn-iframe {
@@ -57,14 +57,14 @@
 }
 
 .gh-home-subscribe-title {
-    font-size: 3.6rem;
-    color: var(--color-white);
+    font-size: 3.2rem;
+    color: #fff;
 }
 
 .gh-home-subscribe-description {
     margin-top: 1.6rem;
     font-size: 1.7rem;
-    color: var(--color-white);
+    color: #fff;
 }
 
 .gh-home-subscribe-input {
@@ -75,22 +75,23 @@
     height: 64px;
     margin-top: 4rem;
     font-size: 1.9rem;
-    color: var(--color-white);
+    color: #fff;
     border-bottom: 4px solid rgba(255, 255, 255, 0.4);
 }
 
 .gh-home-subscribe-input::after {
     position: absolute;
     bottom: -4px;
-    width: 0;
+    width: 100%;
     height: 4px;
     content: "";
     background-color: #fff;
-    transition: width 0.7s cubic-bezier(0.26, 0.86, 0.6, 0.99);
+    opacity: 0;
+    transition: opacity 0.4s cubic-bezier(0.26, 0.86, 0.6, 0.99);
 }
 
 .gh-home-subscribe-input:hover::after {
-    width: 100%;
+    opacity: 1;
 }
 
 .gh-home-subscribe-input span {
@@ -100,7 +101,7 @@
     width: 40px;
     height: 40px;
     line-height: 0;
-    color: var(--color-white);
+    color: #fff;
     background-color: var(--ghost-accent-color);
     border-radius: 50%;
 }
@@ -242,6 +243,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    font-size: 3.6rem;
 }
 
 .gh-pagehead-title::before {
@@ -265,30 +267,21 @@
     padding: 4rem 0;
     white-space: nowrap;
     border-top: 1px solid var(--color-light-gray);
-    transition: opacity 0.2s ease;
 }
 
 .gh-card-link::before {
     position: absolute;
     top: -1px;
     left: 0;
+    width: 100%;
     height: 2px;
     content: "";
     background-color: var(--color-darker-gray);
     opacity: 0;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.4s cubic-bezier(0.26, 0.86, 0.6, 0.99);
 }
 
 .gh-card-link:hover::before {
-    width: 100%;
-    opacity: 1;
-}
-
-.gh-feed:hover .gh-card-link {
-    opacity: 0.4;
-}
-
-.gh-feed:hover .gh-card-link:hover {
     opacity: 1;
 }
 
@@ -349,9 +342,12 @@
 }
 
 .gh-navigation {
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 700;
-    letter-spacing: -0.01em;
+}
+
+.gh-navigation-middle .gh-navigation-link {
+    color: var(--ghost-accent-color);
 }
 
 @keyframes pulse {
