--- a/post.hbs
+++ b/post.hbs
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="gh-navigation-middle">
-                    <a class="gh-btn" href="/page/2">Browse archive</a>
+                    <a class="gh-navigation-link" href="/page/2">Browse archive</a>
                 </div>
 
                 <div class="gh-navigation-next">
