--- a/index.hbs
+++ b/index.hbs
@@ -3,9 +3,9 @@
 <main class="gh-main gh-inner">
     <section class="gh-pagehead">
         <header class="gh-pagehead-content">
-            <h1 class="gh-tag-name gh-pagehead-title">Past issues</h1>
+            <h1 class="gh-pagehead-title">Past issues</h1>
 
-            <div class="gh-tag-description gh-pagehead-description">
+            <div class="gh-pagehead-description">
                 {{#if description}}
                     {{description}}
                 {{else}}
