--- a/author.hbs
+++ b/author.hbs
@@ -1,44 +1,44 @@
 {{!< default}}
 
-<main class="gh-main gh-outer">
-    <div class="gh-inner">
-        {{#author}}
-            <section class="gh-pagehead">
-                {{#if profile_image}}
-                    <img class="gh-author-image gh-pagehead-image" src="{{profile_image}}" alt="{{name}}">
-                {{else}}
-                    <span class="gh-author-icon">{{> "icons/avatar"}}</span>
+<main class="gh-main gh-inner">
+    {{#author}}
+        <section class="gh-author gh-pagehead">
+            {{#if profile_image}}
+                <img class="gh-author-image gh-pagehead-image" src="{{profile_image}}" alt="{{name}}">
+            {{else}}
+                <span class="gh-author-icon">{{> "icons/avatar"}}</span>
+            {{/if}}
+
+            <header class="gh-pagehead-content">
+                <h1 class="gh-author-name gh-pagehead-title">{{name}}</h1>
+
+                {{#if bio}}
+                    <div class="gh-author-bio gh-pagehead-description">{{bio}}</div>
                 {{/if}}
 
-                <header class="gh-pagehead-content">
-                    <h1 class="gh-author-name gh-pagehead-title">{{name}}</h1>
-
-                    {{#if bio}}
-                        <div class="gh-author-bio gh-pagehead-description">{{bio}}</div>
-                    {{/if}}
-
+                <div class="gh-author-meta">
                     {{#if location}}
-                        <div class="gh-author-location">📍 {{location}}</div>
+                        <span class="gh-author-location">📍 {{location}}</span>
                     {{/if}}
                     {{#if website}}
                         <a class="gh-author-website" href="{{website}}" target="_blank" rel="noopener">{{website}}</a>
                     {{/if}}
                     {{#if twitter}}
-                        <a class="gh-author-twitter" href="{{twitter_url}}" target="_blank" rel="noopener">{{twitter_url}}</a>
+                        <a class="gh-author-twitter" href="{{twitter_url}}" target="_blank" rel="noopener">{{> icons/twitter}}</a>
                     {{/if}}
                     {{#if facebook}}
-                        <a class="gh-author-facebook" href="{{facebook_url}}" target="_blank" rel="noopener">{{facebook_url}}</a>
+                        <a class="gh-author-facebook" href="{{facebook_url}}" target="_blank" rel="noopener">{{> icons/facebook}}</a>
                     {{/if}}
-                </header>
-            </section>
-        {{/author}}
+                </div>
+            </header>
+        </section>
 
         <div class="gh-feed">
-            {{#foreach posts}}
-                {{> loop}}
-            {{/foreach}}
+            {{#get "posts" filter="primary_author:{{slug}}" limit="all"}}
+                {{#foreach posts}}
+                    {{> loop}}
+                {{/foreach}}
+            {{/get}}
         </div>
-
-        {{pagination}}
-    </div>
+    {{/author}}
 </main>
