Fix partial syntax

--- a/author.hbs
+++ b/author.hbs
@@ -6,7 +6,7 @@
             {{#if profile_image}}
                 <img class="gh-author-image gh-pagehead-image" src="{{profile_image}}" alt="{{name}}">
             {{else}}
-                <span class="gh-author-icon">{{> "icons/avatar"}}</span>
+                <span class="gh-author-icon">{{> icons/avatar}}</span>
             {{/if}}
 
             <header class="gh-pagehead-content">
