--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-    --font-sans: Mulish; /* stylelint-disable-line value-keyword-case */
+    --font-sans: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
     --head-height: 80px;
     --h1-size: 4.2rem;
 }
@@ -389,20 +389,6 @@ body:not(.home-template) .gh-main {
     color: var(--ghost-accent-color);
 }
 
-@keyframes pulse {
-    0% {
-        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0.7);
-    }
-
-    70% {
-        box-shadow: 0 0 0 4px rgba(255, 26, 117, 0);
-    }
-
-    100% {
-        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0);
-    }
-}
-
 @media (max-width: 991px) {
     .gh-home {
         grid-template-columns: 1fr;
@@ -418,5 +404,19 @@ body:not(.home-template) .gh-main {
 
     .gh-home-latest {
         height: 100vh;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0.7);
+    }
+
+    70% {
+        box-shadow: 0 0 0 4px rgba(255, 26, 117, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0);
     }
 }
