--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,7 @@
     {{ghost_head}}
 </head>
 
-<body class="{{body_class}}">
+<body class="{{body_class}} is-head-transparent">
     <div class="gh-site">
         {{^is "home"}}
             <header id="gh-head" class="gh-head gh-outer">
