--- a/home.hbs
+++ b/home.hbs
@@ -37,8 +37,6 @@
                 {{#get "posts" limit="1" include="authors"}}
                     {{#foreach posts}}
                         <article class="gh-article {{post_class}}">
-                            <a class="gh-article-link" href="{{url}}"></a>
-
                             <header class="gh-article-header">
                                 <h2 class="gh-article-title">{{title}}</h2>
                                 <span class="gh-article-meta">
@@ -68,7 +66,7 @@
                         </article>
 
                         <footer class="gh-home-latest-footer">
-                            <button class="gh-btn">Read latest issue</button>
+                            <a class="gh-btn" href="{{url}}">Read latest issue</a>
                         </footer>
                     {{/foreach}}
                 {{/get}}
