--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -213,7 +213,7 @@ body:not(.home-template) .gh-main {
     margin-right: 0.8rem;
     background-color: var(--ghost-accent-color);
     border-radius: 50%;
-    box-shadow: 0 0 0 0 rgba(255, 26, 117, 1);
+    box-shadow: 0 0 0 0 rgba(var(--ghost-accent-color-rgb), 1);
     animation: pulse 2s infinite;
 }
 
@@ -410,14 +410,14 @@ body:not(.home-template) .gh-main {
 
 @keyframes pulse {
     0% {
-        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0.7);
+        box-shadow: 0 0 0 0 rgba(var(--ghost-accent-color-rgb), 0.7);
     }
 
     70% {
-        box-shadow: 0 0 0 4px rgba(255, 26, 117, 0);
+        box-shadow: 0 0 0 4px rgba(var(--ghost-accent-color-rgb), 0);
     }
 
     100% {
-        box-shadow: 0 0 0 0 rgba(255, 26, 117, 0);
+        box-shadow: 0 0 0 0 rgba(var(--ghost-accent-color-rgb), 0);
     }
 }
